--- a/.env.sample
+++ b/.env.sample
@@ -1,8 +1,8 @@
-BOT_TOKEN=
 VISIT_HALLA_API_URL=
 VISIT_HALLA_MAIN_URL=
 COURSE_SEQ=
 VISIT_DATE=
 VISIT_TIME=
+TELEGRAM_BOT_TOKEN=
 TELEGRAM_BOT_API_URL=
 TELEGRAM_CHAT_ID=
